--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -1,42 +1,38 @@
 package layout
 
-
 templ Base(heading string) {
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
-    <link href="/assets/styles.css" rel="stylesheet">
-    <title>tyspice</title>
-  </head>
-  <body hx-boost="true" class="bg-indigo-950 h-screen w-screen p-8">
-
-    <div class="flex flex-col border-2 border-indigo-500 p-3 rounded-lg size-full">
-
-      <!-- Header -->
-      <div class=" flex text-indigo-500 p-5 border-indigo-500 border-b-2 border-double h-fit w-full justify-between">
-        <div>
-          <pre>
-            { heading }
-          </pre>
-        </div>
-        <div class="flex flex-row items-end">
-          <div>
-            <a href="/" class="text-4xl">Home</a>
-          </div>
-          <div class="ms-5">
-            <a href="/about" class="text-4xl">About</a>
-          </div>
-        </div>
-      </div>
-      <!-- Page Body -->
-      <div class="flex-row p5 h-full w-full">
-        { children... }
-      </div>      
-    </div>
-
-  </body>
-  </html>
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+			<meta charset="UTF-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
+			<link href="/assets/styles.css" rel="stylesheet"/>
+			<title>tyspice</title>
+		</head>
+		<body hx-boost="true" class="bg-indigo-950 h-screen w-screen p-8">
+			<div class="flex flex-col border-2 border-indigo-500 p-3 rounded-lg size-full">
+				<!-- Header -->
+				<div class=" flex text-indigo-500 p-5 border-indigo-500 border-b-2 border-double h-fit w-full justify-between">
+					<div>
+						<pre>
+							{ heading }
+						</pre>
+					</div>
+					<div class="flex flex-row items-end">
+						<div>
+							<a href="/" class="text-4xl">Home</a>
+						</div>
+						<div class="ms-5">
+							<a href="/about" class="text-4xl">About</a>
+						</div>
+					</div>
+				</div>
+				<!-- Page Body -->
+				<div class="flex-row p5 h-full w-full">
+					{ children... }
+				</div>
+			</div>
+		</body>
+	</html>
 }
