--- a/view/page/about.templ
+++ b/view/page/about.templ
@@ -2,8 +2,8 @@ package page
 
 import "github.com/tyspice/spicenet/view/layout"
 
-templ About(heading string) {
-	@layout.Base(heading) {
+templ About() {
+	@layout.Base() {
 		<div class="flex justify-center content-center h-full">
 			<div class="h-72 w-56 self-center">
 				<p class="text-indigo-400">Lorem culpa labore minim fugiat magna nisi. Sunt tempor minim aute fugiat Lorem est nulla excepteur qui pariatur. Cupidatat amet ea aliqua sint laborum incididunt anim culpa officia pariatur adipisicing aute. Qui non nisi velit proident ex id nulla proident pariatur do cillum labore occaecat laboris.</p>
