--- a/view/page/home.templ
+++ b/view/page/home.templ
@@ -5,8 +5,8 @@ import (
 	"github.com/tyspice/spicenet/view/layout"
 )
 
-templ Home(heading string) {
-	@layout.Base(heading) {
+templ Home() {
+	@layout.Base() {
 		<div class="flex flex-col justify-center h-full">
 			@component.Hello()
 		</div>
